num of chars on card, scrollbar issue, input text hover issue resolved

--- a/myTodo.css
+++ b/myTodo.css
@@ -55,23 +55,19 @@ body {
   border-radius: 10px;
   height: 200px;
   min-height: 200px;
-  /* text-overflow: ellipsis;
-overflow: hidden;
-white-space: nowrap; */
 }
-/* #lis {
-text-overflow: ellipsis;
-overflow: hidden;
-white-space: nowrap;
 
-} */
+#listItem {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  list-style-type: square;
+  list-style-position: inside;
+}
 
 .title {
   font-size: 100%;
   font-weight: bold;
-}
-.card ul {
-  list-style-type: square;
 }
 .exp ul {
   list-style-type: none;
@@ -140,6 +136,7 @@ white-space: nowrap;
   text-align: center;
   background-color: #e8eeef;
   margin-bottom: 30px;
+  outline: none;
 }
 .modal-content .number {
   background: #d45079;
@@ -229,7 +226,7 @@ input[type="checkbox"]:checked + label {
   text-decoration: line-through;
 }
 
-.icon {
+#icon {
   float: left;
   margin-left: 2%;
   margin-right: 1%;
@@ -240,7 +237,7 @@ input[type="checkbox"]:checked + label {
   height: 35px;
   width: 35px;
 }
-.taskicon {
+#taskicon {
   float: right;
   position: relative;
   top: 0px;
@@ -250,7 +247,7 @@ input[type="checkbox"]:checked + label {
   width: 35px;
 }
 
-.navbar {
+#navbar {
   overflow: hidden;
   margin-top: 20px;
   /* background-color: #f8f6f2; */
@@ -260,7 +257,7 @@ input[type="checkbox"]:checked + label {
   width: 100%;
 }
 
-.navbar a {
+#navbar a {
   float: right;
   /* top : 10px; */
   margin-left: 2%;
@@ -284,7 +281,6 @@ input[type="checkbox"]:checked + label {
   z-index: 1;
   width: 60%;
   height: 100%;
-  overflow: auto;
   margin: 10px auto;
   border-radius: 8px;
   font-family: Georgia, "Times New Roman", Times, serif;
@@ -293,7 +289,7 @@ input[type="checkbox"]:checked + label {
 /* Modal Content */
 .modalExp-content {
   width: 80%;
-  height: auto;
+  height: 60%;
   margin-bottom: 5%;
   margin-bottom: 5%;
   padding: 10px 20px;
